[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dnspython>=2.7.0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "streamlit>=1.49.0",
    "trafilatura>=2.0.0",
]
